# rp235x-pac

./: CHANGELOG.md  Cargo.toml  README.md  sortFieldsAlphaNum.sh  svd2rust.toml  update.sh
.cargo/: config.toml
.github/workflows/: build_and_test.yml  clippy.yml  rustfmt.yml  update.yml
src/: lib.rs
src/inner/: interrupt.rs  mod_cortex_m.rs  mod_risc_v.rs
src/inner/otp_data_raw/: bootkey0_0.rs  bootkey0_1.rs  bootkey0_10.rs  bootkey0_11.rs  bootkey0_12.rs  bootkey0_13.rs  bootkey0_14.rs  bootkey0_15.rs  bootkey0_2.rs  bootkey0_3.rs  bootkey0_4.rs  bootkey0_5.rs  bootkey0_6.rs  bootkey0_7.rs  bootkey0_8.rs  bootkey0_9.rs  bootkey1_0.rs  bootkey1_1.rs  bootkey1_10.rs  bootkey1_11.rs  bootkey1_12.rs  bootkey1_13.rs  bootkey1_14.rs  bootkey1_15.rs  bootkey1_2.rs  bootkey1_3.rs  bootkey1_4.rs  bootkey1_5.rs  bootkey1_6.rs  bootkey1_7.rs  bootkey1_8.rs  bootkey1_9.rs  bootkey2_0.rs  bootkey2_1.rs  bootkey2_10.rs  bootkey2_11.rs  bootkey2_12.rs  bootkey2_13.rs  bootkey2_14.rs  bootkey2_15.rs  (+99 more)
svd/: RP2350.svd.patched  RP2350.yaml
